--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,12 +1,15 @@
-.profile{
-  &-page{
-
-  }
-  &-header{
-    text-align: center;
-    .username-prefix{
-      color: rgb(70, 70, 70);
-      font-size: 28px;
-    }
-  }
+.profile {
+	&-page {
+		padding: 1rem;
+	}
+	&-header {
+		text-align: center;
+		img {
+			pointer-events: none;
+		}
+		.username-prefix {
+			color: rgb(70, 70, 70);
+			font-size: 28px;
+		}
+	}
 }
