--- a/src/pages/chat/chatroom.scss
+++ b/src/pages/chat/chatroom.scss
@@ -20,87 +20,144 @@
 			font-size: 0.8rem;
 		}
 	}
-	.chat-body {
-		height: 80%;
-		overflow-y: auto;
-		padding: 1rem;
-	
-		.message-wrap {
-			position: relative;
-			padding-top: .5rem;
-			.avatar{
-				position: absolute;
-				bottom:  0;
-				width: 40px;
-				height: 40px;
-				border-radius: 50%;
-				margin-right: 1rem;
-				background-color: #ffca28;
-			}
-			.chat-message {
-				padding: 1rem;
-				max-width: 45%;
-				.message {
-					color: #fff;
-					font-size: 0.9rem;
-				}
-				&.me {
-					background-color: #ffca28;
-					border-radius: 0.5rem;
-					margin-left: auto;
-					margin-right: 0;
-					p{
-						color: #000;
-					}
-					.time{
-						color: rgb(49, 49, 49);
-					}
-				}
-				&.other {
-					background-color: rgba(255, 255, 255, 0.2);
-					border-radius: 0.5rem;
-					margin-left: 2rem;
-					margin-right: auto;
-				}
-
-				.time {
-					color: rgb(175, 175, 175);
-					font-size: 0.8rem;
-				}
-				.status {
-					color: rgb(49, 49, 49);
-					margin-left: 0.5rem;
-					font-size: 0.8rem;
-				}
-			}
-		}
-	}
-	.chat-footer {
+	.chat-body-footer {
 		display: flex;
-		align-items: center;
-		background-color: rgba(255, 255, 255, 0.1);
-		padding: 1rem;
-		height: 10%;
-		input {
-			flex: 1;
-			background-color: transparent;
-			border: none;
-			color: #fff;
-			font-size: 1rem;
-			padding: 0.5rem;
-			&:focus {
-				outline: none;
+		flex-direction: column;
+		flex-grow: 1;
+		min-width: 0;
+		max-width: 100%;
+		position: relative;
+		height: 90%;
+		.chat-body {
+			display: flex;
+			flex-direction: column;
+			flex-basis: 0;
+			flex-grow: 1;
+			overflow-y: auto;
+			overflow-x: hidden;
+			padding: 1rem;
+
+			.message-wrap {
+				position: relative;
+				padding-top: 0.5rem;
+				.avatar {
+					position: absolute;
+					bottom: 0;
+					width: 40px;
+					height: 40px;
+					border-radius: 50%;
+					margin-right: 1rem;
+					background-color: #ffca28;
+				}
+				.chat-message {
+					padding: 1rem;
+					max-width: 45%;
+					.message {
+						color: #fff;
+						font-size: 0.9rem;
+					}
+					&.me {
+						background-color: #ffc92852;
+						border-radius: 0.5rem;
+						margin-left: auto;
+						margin-right: 0;
+						p {
+							color: #fff;
+						}
+						.time {
+							color: rgb(221, 221, 221);
+						}
+					}
+					&.other {
+						background-color: rgba(255, 255, 255, 0.2);
+						border-radius: 0.5rem;
+						margin-left: 2rem;
+						margin-right: auto;
+						.status {
+							color: #ffca28;
+						}
+					}
+
+					.time {
+						color: rgb(175, 175, 175);
+						font-size: 0.8rem;
+					}
+					.status {
+						color: #ffca28;
+						margin-left: 0.5rem;
+						font-size: 0.8rem;
+					}
+				}
 			}
 		}
-		button {
-			background-color: transparent;
-			border: none;
-			color: #fff;
-			font-size: 1rem;
-			padding: 0.5rem;
-			&:focus {
-				outline: none;
+		.chat-footer {
+			display: flex;
+			align-items: center;
+			background-color: rgba(255, 255, 255, 0.1);
+			padding: 1rem;
+
+			.input-warp {
+				max-height: 80px;
+				width: 100%;
+				position: relative;
+
+				span#editable {
+					display: block;
+					max-height: 50px;
+					overflow-y: auto;
+					word-wrap: anywhere;
+					width: 100%;
+					border: 1px solid #ffca28;
+					padding: 5px;
+					border-radius: 5px;
+					&:focus-visible {
+						outline: none;
+						border-width: 2px;
+					}
+				}
+				label {
+					position: absolute;
+					top: -1rem;
+					left: 0;
+					font-size: .8rem;
+				}
 			}
+			.emoji-wrap {
+				position: relative;
+				.emoji-show {
+					margin: 0 0.5rem;
+					cursor: pointer;
+				}
+				.custom-emoji-picker {
+					display: none;
+					position: absolute;
+					bottom: 120%;
+					left: 0;
+					z-index: 999;
+					&.show {
+						display: flex;
+					}
+				}
+			}
+			button.MuiButton-root {
+				margin: 0 auto;
+				background-color: #ffca28;
+				border: none;
+				color: #21242e;
+				font-size: 1rem;
+				padding-left: 1rem;
+				padding-right: 1rem;
+				&:focus {
+					outline: none;
+				}
+			}
+		}
+		.emoji {
+			max-height: 18px;
+			background-size: '16px 16px';
+			background-position: 'center';
+			background-repeat: 'no-repeat';
+			text-align: center;
 		}
 	}
 }
