--- a/src/pages/chat/chatroom.scss
+++ b/src/pages/chat/chatroom.scss
@@ -1,10 +1,12 @@
 #chat-wrap {
+	display: flex;
+	flex-direction: column;
 	height: calc(100vh - 64px);
 	position: relative;
 	.chat-header {
 		display: flex;
 		width: 100%;
-		height: 10%;
+		height: 80px;
 		align-items: center;
 		background-color: rgb(49, 49, 49);
 		padding: 1rem;
@@ -24,10 +26,8 @@
 		display: flex;
 		flex-direction: column;
 		flex-grow: 1;
-		min-width: 0;
 		max-width: 100%;
 		position: relative;
-		height: 90%;
 		.chat-body {
 			display: flex;
 			flex-direction: column;
@@ -95,7 +95,7 @@
 			align-items: center;
 			background-color: rgba(255, 255, 255, 0.1);
 			padding: 1rem;
-
+			padding-top: 1.2rem;
 			.input-warp {
 				max-height: 80px;
 				width: 100%;
@@ -107,24 +107,28 @@
 					overflow-y: auto;
 					word-wrap: anywhere;
 					width: 100%;
-					border: 1px solid #ffca28;
+					border: 2px solid #ffc9287a;
 					padding: 5px;
 					border-radius: 5px;
+					
 					&:focus-visible {
 						outline: none;
-						border-width: 2px;
+						border-color: #ffca28;
 					}
 				}
 				label {
 					position: absolute;
 					top: -1rem;
 					left: 0;
+					color: #ffca28;
 					font-size: .8rem;
 				}
 			}
 			.emoji-wrap {
 				position: relative;
 				.emoji-show {
+					display: flex;
+					align-items: center;
 					margin: 0 0.5rem;
 					cursor: pointer;
 				}
